--- a/places.html
+++ b/places.html
@@ -1117,7 +1117,7 @@
                                                       class="card-alt-4__overlay dir dir-ltr"
                                                       style="
                                                         --media-overlay_top-row-padding: var(
-                                                          --jaa-ni-h
+                                                          --spacer-5
                                                         );
                                                       "
                                                     >
@@ -1373,7 +1373,7 @@
                                                       class="card-alt-4__overlay dir dir-ltr"
                                                       style="
                                                         --media-overlay_top-row-padding: var(
-                                                          --jaa-ni-h
+                                                          --spacer-5
                                                         );
                                                       "
                                                     >
@@ -1629,7 +1629,7 @@
                                                       class="card-alt-4__overlay dir dir-ltr"
                                                       style="
                                                         --media-overlay_top-row-padding: var(
-                                                          --jaa-ni-h
+                                                          --spacer-5
                                                         );
                                                       "
                                                     >
@@ -2308,7 +2308,7 @@
                                               class="place__img-action-btns-wrapper dir dir-ltr"
                                               style="
                                                 --media-overlay_top-row-padding: var(
-                                                  --fgg-f-l-a
+                                                  --spacer-3
                                                 );
                                               "
                                             >
@@ -2489,7 +2489,7 @@
                                         <div
                                           class="place__nearby-card-loc-wrapper place__nearby-card-loc-overflow dir dir-ltr"
                                           style="
-                                            --margin-bottom: var(--d-b-mrdy);
+                                            --margin-bottom: var(--spacer-1);
                                           "
                                         >
                                           <ol class="place__rate-text-wrapper dir dir-ltr">
@@ -3020,7 +3020,7 @@
                                               class="place__img-action-btns-wrapper dir dir-ltr"
                                               style="
                                                 --media-overlay_top-row-padding: var(
-                                                  --fgg-f-l-a
+                                                  --spacer-3
                                                 );
                                               "
                                             >
@@ -3201,7 +3201,7 @@
                                         <div
                                           class="place__nearby-card-loc-wrapper place__nearby-card-loc-overflow dir dir-ltr"
                                           style="
-                                            --margin-bottom: var(--d-b-mrdy);
+                                            --margin-bottom: var(--spacer-1);
                                           "
                                         >
                                           <ol class="place__rate-text-wrapper dir dir-ltr">
@@ -3732,7 +3732,7 @@
                                               class="place__img-action-btns-wrapper dir dir-ltr"
                                               style="
                                                 --media-overlay_top-row-padding: var(
-                                                  --fgg-f-l-a
+                                                  --spacer-3
                                                 );
                                               "
                                             >
@@ -3913,7 +3913,7 @@
                                         <div
                                           class="place__nearby-card-loc-wrapper place__nearby-card-loc-overflow dir dir-ltr"
                                           style="
-                                            --margin-bottom: var(--d-b-mrdy);
+                                            --margin-bottom: var(--spacer-1);
                                           "
                                         >
                                           <ol class="place__rate-text-wrapper dir dir-ltr">
@@ -4444,7 +4444,7 @@
                                               class="place__img-action-btns-wrapper dir dir-ltr"
                                               style="
                                                 --media-overlay_top-row-padding: var(
-                                                  --fgg-f-l-a
+                                                  --spacer-3
                                                 );
                                               "
                                             >
@@ -4625,7 +4625,7 @@
                                         <div
                                           class="place__nearby-card-loc-wrapper place__nearby-card-loc-overflow dir dir-ltr"
                                           style="
-                                            --margin-bottom: var(--d-b-mrdy);
+                                            --margin-bottom: var(--spacer-1);
                                           "
                                         >
                                           <ol class="place__rate-text-wrapper dir dir-ltr">
@@ -5148,7 +5148,7 @@
                                               class="place__img-action-btns-wrapper dir dir-ltr"
                                               style="
                                                 --media-overlay_top-row-padding: var(
-                                                  --fgg-f-l-a
+                                                  --spacer-3
                                                 );
                                               "
                                             >
@@ -5329,7 +5329,7 @@
                                         <div
                                           class="place__nearby-card-loc-wrapper place__nearby-card-loc-overflow dir dir-ltr"
                                           style="
-                                            --margin-bottom: var(--d-b-mrdy);
+                                            --margin-bottom: var(--spacer-1);
                                           "
                                         >
                                           <ol class="place__rate-text-wrapper dir dir-ltr">
@@ -5860,7 +5860,7 @@
                                               class="place__img-action-btns-wrapper dir dir-ltr"
                                               style="
                                                 --media-overlay_top-row-padding: var(
-                                                  --fgg-f-l-a
+                                                  --spacer-3
                                                 );
                                               "
                                             >
@@ -6041,7 +6041,7 @@
                                         <div
                                           class="place__nearby-card-loc-wrapper place__nearby-card-loc-overflow dir dir-ltr"
                                           style="
-                                            --margin-bottom: var(--d-b-mrdy);
+                                            --margin-bottom: var(--spacer-1);
                                           "
                                         >
                                           <ol class="place__rate-text-wrapper dir dir-ltr">
@@ -6574,7 +6574,7 @@
                                               class="place__img-action-btns-wrapper dir dir-ltr"
                                               style="
                                                 --media-overlay_top-row-padding: var(
-                                                  --fgg-f-l-a
+                                                  --spacer-3
                                                 );
                                               "
                                             >
@@ -6755,7 +6755,7 @@
                                         <div
                                           class="place__nearby-card-loc-wrapper place__nearby-card-loc-overflow dir dir-ltr"
                                           style="
-                                            --margin-bottom: var(--d-b-mrdy);
+                                            --margin-bottom: var(--spacer-1);
                                           "
                                         >
                                           <ol class="place__rate-text-wrapper dir dir-ltr">
@@ -7206,7 +7206,7 @@
                                               class="place__img-action-btns-wrapper dir dir-ltr"
                                               style="
                                                 --media-overlay_top-row-padding: var(
-                                                  --fgg-f-l-a
+                                                  --spacer-3
                                                 );
                                               "
                                             >
@@ -7387,7 +7387,7 @@
                                         <div
                                           class="place__nearby-card-loc-wrapper place__nearby-card-loc-overflow dir dir-ltr"
                                           style="
-                                            --margin-bottom: var(--d-b-mrdy);
+                                            --margin-bottom: var(--spacer-1);
                                           "
                                         >
                                           <ol class="place__rate-text-wrapper dir dir-ltr">
@@ -7838,7 +7838,7 @@
                                               class="place__img-action-btns-wrapper dir dir-ltr"
                                               style="
                                                 --media-overlay_top-row-padding: var(
-                                                  --fgg-f-l-a
+                                                  --spacer-3
                                                 );
                                               "
                                             >
@@ -8019,7 +8019,7 @@
                                         <div
                                           class="place__nearby-card-loc-wrapper place__nearby-card-loc-overflow dir dir-ltr"
                                           style="
-                                            --margin-bottom: var(--d-b-mrdy);
+                                            --margin-bottom: var(--spacer-1);
                                           "
                                         >
                                           <ol class="place__rate-text-wrapper dir dir-ltr">
@@ -8550,7 +8550,7 @@
                                               class="place__img-action-btns-wrapper dir dir-ltr"
                                               style="
                                                 --media-overlay_top-row-padding: var(
-                                                  --fgg-f-l-a
+                                                  --spacer-3
                                                 );
                                               "
                                             >
@@ -8731,7 +8731,7 @@
                                         <div
                                           class="place__nearby-card-loc-wrapper place__nearby-card-loc-overflow dir dir-ltr"
                                           style="
-                                            --margin-bottom: var(--d-b-mrdy);
+                                            --margin-bottom: var(--spacer-1);
                                           "
                                         >
                                           <ol class="place__rate-text-wrapper dir dir-ltr">
@@ -9263,7 +9263,7 @@
                                               class="place__img-action-btns-wrapper dir dir-ltr"
                                               style="
                                                 --media-overlay_top-row-padding: var(
-                                                  --fgg-f-l-a
+                                                  --spacer-3
                                                 );
                                               "
                                             >
@@ -9444,7 +9444,7 @@
                                         <div
                                           class="place__nearby-card-loc-wrapper place__nearby-card-loc-overflow dir dir-ltr"
                                           style="
-                                            --margin-bottom: var(--d-b-mrdy);
+                                            --margin-bottom: var(--spacer-1);
                                           "
                                         >
                                           <ol class="place__rate-text-wrapper dir dir-ltr">
@@ -9976,7 +9976,7 @@
                                               class="place__img-action-btns-wrapper dir dir-ltr"
                                               style="
                                                 --media-overlay_top-row-padding: var(
-                                                  --fgg-f-l-a
+                                                  --spacer-3
                                                 );
                                               "
                                             >
@@ -10157,7 +10157,7 @@
                                         <div
                                           class="place__nearby-card-loc-wrapper place__nearby-card-loc-overflow dir dir-ltr"
                                           style="
-                                            --margin-bottom: var(--d-b-mrdy);
+                                            --margin-bottom: var(--spacer-1);
                                           "
                                         >
                                           <ol class="place__rate-text-wrapper dir dir-ltr">
@@ -10688,7 +10688,7 @@
                                               class="place__img-action-btns-wrapper dir dir-ltr"
                                               style="
                                                 --media-overlay_top-row-padding: var(
-                                                  --fgg-f-l-a
+                                                  --spacer-3
                                                 );
                                               "
                                             >
@@ -10869,7 +10869,7 @@
                                         <div
                                           class="place__nearby-card-loc-wrapper place__nearby-card-loc-overflow dir dir-ltr"
                                           style="
-                                            --margin-bottom: var(--d-b-mrdy);
+                                            --margin-bottom: var(--spacer-1);
                                           "
                                         >
                                           <ol class="place__rate-text-wrapper dir dir-ltr">
@@ -11400,7 +11400,7 @@
                                               class="place__img-action-btns-wrapper dir dir-ltr"
                                               style="
                                                 --media-overlay_top-row-padding: var(
-                                                  --fgg-f-l-a
+                                                  --spacer-3
                                                 );
                                               "
                                             >
@@ -11581,7 +11581,7 @@
                                         <div
                                           class="place__nearby-card-loc-wrapper place__nearby-card-loc-overflow dir dir-ltr"
                                           style="
-                                            --margin-bottom: var(--d-b-mrdy);
+                                            --margin-bottom: var(--spacer-1);
                                           "
                                         >
                                           <ol class="place__rate-text-wrapper dir dir-ltr">
@@ -12112,7 +12112,7 @@
                                               class="place__img-action-btns-wrapper dir dir-ltr"
                                               style="
                                                 --media-overlay_top-row-padding: var(
-                                                  --fgg-f-l-a
+                                                  --spacer-3
                                                 );
                                               "
                                             >
@@ -12287,7 +12287,7 @@
                                         <div
                                           class="place__nearby-card-loc-wrapper place__nearby-card-loc-overflow dir dir-ltr"
                                           style="
-                                            --margin-bottom: var(--d-b-mrdy);
+                                            --margin-bottom: var(--spacer-1);
                                           "
                                         >
                                           <ol class="place__rate-text-wrapper dir dir-ltr">
@@ -12818,7 +12818,7 @@
                                               class="place__img-action-btns-wrapper dir dir-ltr"
                                               style="
                                                 --media-overlay_top-row-padding: var(
-                                                  --fgg-f-l-a
+                                                  --spacer-3
                                                 );
                                               "
                                             >
@@ -12999,7 +12999,7 @@
                                         <div
                                           class="place__nearby-card-loc-wrapper place__nearby-card-loc-overflow dir dir-ltr"
                                           style="
-                                            --margin-bottom: var(--d-b-mrdy);
+                                            --margin-bottom: var(--spacer-1);
                                           "
                                         >
                                           <ol class="place__rate-text-wrapper dir dir-ltr">
