--- a/profile.html
+++ b/profile.html
@@ -1244,7 +1244,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                               class="card-alt-4__overlay dir dir-ltr"
                                                               style="
                                                                 --media-overlay_top-row-padding: var(
-                                                                  --jaa-ni-h
+                                                                  --spacer-5
                                                                 );
                                                               "
                                                             >
@@ -2319,7 +2319,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                         class="card-alt-4__overlay dir dir-ltr"
                                                         style="
                                                           --media-overlay_top-row-padding: var(
-                                                            --jaa-ni-h
+                                                            --spacer-5
                                                           );
                                                         "
                                                       >
